# Ai-telegram-bot

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  background.py  main.py  pyproject.toml  requirements.txt  settings.py
bot/: background.py  main.py
bot/config/: settings.py
bot/core/: context_manager.py  i18n.py  pipeline.py  rate_limit.py  router.py
bot/db/: __init__.py  models.py  session.py
bot/db/migrations/: env.py
bot/handlers/: __init__.py  account.py  admin.py  billing.py  callbacks.py  deps.py  keyboards.py  main_menu.py  referrals.py  states.py  work_menu.py
bot/locale/en/: messages.json
bot/services/: channels.py  crypto_rates.py  payments.py  promo.py  users.py
bot/services/ai_providers/: __init__.py  anthropic.py  base.py  cerebras.py  cloudflare.py  fireworks.py  google.py  groq.py  huggingface.py  onlysq.py  (+6 more)
core/: context_manager.py  coursework.py  fsm_storage.py  i18n.py  pipeline.py  rate_limit.py  router.py
db/: __init__.py  models.py  session.py
handlers/: __init__.py  account.py  admin.py  billing.py  callbacks.py  coursework.py  deps.py  file_answer.py  keyboards.py  main_menu.py  referrals.py  states.py  work_menu.py
locale/en/: messages.json
locale/ru/: messages.json
services/: channels.py  crypto_rates.py  files.py  payments.py  promo.py  users.py
services/ai_providers/: __init__.py  anthropic.py  base.py  cerebras.py  cloudflare.py  fireworks.py  github_models.py  google.py  groq.py  huggingface.py  nim.py  onlysq.py  openai.py  openrouter.py  perplexity.py  sambanova.py  together.py  vertex.py
(+1 files in other folders)
